[Fix]Wrong font weight with Noto Sans

--- a/styles/trans-en-zh.less
+++ b/styles/trans-en-zh.less
@@ -5,7 +5,7 @@
 @import "ui-variables";
 
 .trans-en-zh {
-    font-family: "Source Han Sans CN", "WenQuanYi Micro Hei", "PingFang SC", "Microsoft YaHei";
+    font-family: "Noto Sans CJK SC Regular", "Source Han Sans CN", "WenQuanYi Micro Hei", "PingFang SC", "Microsoft YaHei";
     font-size: 1.2em;
 }
 
